manifests/service.yml
  
apiVersion: v1
kind: Service
metadata:
  name: exampleservice
spec:
  selector:
    app: exampleservice
  ports:
  - port: 80
    targetPort: 80
