manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: exampleservice-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: default-exampleservice-replacepathregex@kubernetescrd
    traefik.frontend.rule.type: pathprefixstrip
spec:
  rules:
  - http:
      paths:
      - path: /test
        backend:
          serviceName: exampleservice
          servicePort: 80
